[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyeznacl"
version = "0.1.0"
description = "A wrapper around PyNaCl to make it even easier to use"
readme = "README.md"
requires-python = ">=3.5"
license = {file = "LICENSE"}
authors = [
	{name = "Jon Yoder", email = "jon@yoder.cloud"},
]
keywords = ["nacl","encryption","cryptostring"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Communications"
]
dependencies = [
	"retval>=1.0.0",
	"PyNaCl>=1.3.0",
]
